# repr

./: .clang-format  CMakeLists.txt  README.md  clang-format.bash  main.cpp  reprConfig.cmake.in  single_include.json
include/repr/: repr.h  repr.hpp
include/repr/detail/: has_c_str.h  has_data.h  is_complex.h  is_complexish.h  is_formattable.h  is_initializer_listish.h  is_mappish.h  is_optionalish.h  is_pair.h  is_pairish.h  is_printable.h  is_queueish.h  is_specialization.h  is_stackish.h  is_vectorish.h  magic_enum.hpp  print.h  repr.h  to_string.h
include/repr/detail/boost/: pfr.hpp
include/repr/detail/boost/pfr/: core.hpp  functions_for.hpp  functors.hpp  io.hpp  io_fields.hpp  ops.hpp  ops_fields.hpp  tuple_size.hpp
include/repr/detail/boost/pfr/detail/: cast_to_layout_compatible.hpp  core.hpp  core14_classic.hpp  core14_loophole.hpp  core17.hpp  core17_generated.hpp  detectors.hpp  fields_count.hpp  for_each_field_impl.hpp  functional.hpp  io.hpp  make_flat_tuple_of_references.hpp  make_integer_sequence.hpp  offset_based_getter.hpp  sequence_tuple.hpp  size_array.hpp  stdtuple.hpp  tie_from_structure_tuple.hpp  unsafe_declval.hpp
include/repr/detail/fmt/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  locale.h  os.h  ostream.h  posix.h  printf.h  ranges.h
include/repr/detail/magic_enum/: LICENSE  magic_enum.hpp
single_include/repr/: repr.h
